# mnemon

./: .dockerignore  .gitignore  .gitleaksignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  fly.toml  fly.toml.example  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: changelog.yml  ci-server-extras.yml  ci.yml  deploy-fly.yml  health-monitor.yml  install-test.yml  pip-audit.yml  publish.yml
bench/: README.md  baseline-1k.json  search_stress.py
examples/: README.md  quickstart.py
infrastructure/: mnemon_runner_spot_bootstrap.sh
infrastructure/iam/: README.md  mnemon-runner-executor-role-policy.json
scripts/: _layer3_remote_helper.py  build_standing_set.py  calibrate_capture_threshold.py  check_health.py  mnemon_ops.sh  phase_a_resoak.sh  promote_stable.sh  salience_phase0.sh  validate_cross_device.sh
src/: contradiction.ts  embedder.ts  index.ts  llm.ts  mcp.ts  search.ts  server.ts  store.ts
src/hooks/: framework.ts  session-extractor.ts
src/mnemon/: __init__.py  __main__.py  api.py  auth.py  cli.py  config.py  contradiction.py  doctor.py  downgrade.py  embedder.py  llm.py  mirror.py  nli.py  oauth_as.py  persistent_sessions.py  safety.py  search.py  server.py  server_proxy.py  server_remote.py  setup.py  store.py  sync.py  uninstall.py  upgrade.py  vecstore.py
src/mnemon/dashboard/: __init__.py  app.py  charts.py  loaders.py
src/mnemon/dashboard/pages/: 1_Search.py  2_Timeline.py  3_Graph.py  4_Profile.py
src/mnemon/hooks/: _client.py  _remote_client.py  auto_mirror.py  context_surfacing.py  framework.py  handoff_generator.py  session_extractor.py
tests/: conftest.py  coverage.test.ts  integration.test.ts  search.test.ts  server.test.ts  test_api.py  test_auth.py  test_build_standing_set.py  test_capture_attention.py  test_charts.py  test_check_health.py  test_cli.py  test_contradiction.py  test_dashboard_loaders.py  test_dashboard_pages.py  test_doctor.py  test_downgrade.py  test_embedder.py  test_hooks.py  test_hooks_auto_mirror.py  test_hooks_client.py  test_hooks_extended.py  test_hooks_remote_client.py  test_integration_remote.py  test_llm.py  test_mirror.py  test_mnemon_ops.py  test_nli.py  test_oauth_as.py  test_persistent_sessions.py  test_phase_a_resoak.py  test_promote_stable.sh  test_safety.py  test_scripts_smoke.py  test_search.py  test_server.py  test_server_proxy.py  test_server_remote.py  test_setup.py  test_standing_tier.py  (+8 more)
tests/fixtures/: capture_attention_pairs.example.json  capture_attention_pairs.json
ts/: CLAUDE.md
ts/src/: index.ts  search.ts  sync.ts  vecstore.ts
ts/src/hooks/: context-surfacing.ts  handoff-generator.ts
ts/tests/: hooks.test.ts  store.test.ts
