[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mnemon-memory"
version = "0.6.0rc1"
description = "Universal long-term memory layer for AI agents via MCP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Brian McMahon", email = "cipher813@gmail.com" },
]
urls.Homepage = "https://github.com/cipher813/mnemon"
urls.Repository = "https://github.com/cipher813/mnemon"
urls.Issues = "https://github.com/cipher813/mnemon/issues"
urls.Changelog = "https://github.com/cipher813/mnemon/blob/main/CHANGELOG.md"
keywords = ["mcp", "memory", "ai", "agents", "llm", "sqlite", "vector-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
]
dependencies = [
    "mcp>=1.27",
    "numpy>=1.24",
    "fastembed>=0.3",
    "httpx[socks]>=0.25",
]

[project.optional-dependencies]
llm = [
    "llama-cpp-python>=0.3",
    "huggingface-hub>=0.20",
]
ui = [
    "streamlit>=1.30",
    "plotly>=5.18",
    "umap-learn>=0.5",
]
server = [
    "uvicorn>=0.29",
    "starlette>=0.37",
    "pyjwt[crypto]>=2.8",
    "authlib>=1.3",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "uvicorn>=0.29",
    "starlette>=0.37",
    "pyjwt[crypto]>=2.8",
    "authlib>=1.3",
]
all = [
    "mnemon-memory[llm,dev,ui,server]",
]

[project.scripts]
mnemon = "mnemon.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mnemon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: end-to-end tests that spawn a real mnemon serve-remote subprocess (skip with -m 'not integration')",
]

[tool.ruff.lint.per-file-ignores]
# Streamlit convention: st.set_page_config(...) must precede any other
# Streamlit command, so page modules import library code after the
# call. Legit pattern, not refactoring.
"src/mnemon/dashboard/**/*.py" = ["E402"]
