[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mnemon-memory"
version = "0.7.0rc2"
description = "Universal long-term memory layer for AI agents via MCP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Brian McMahon", email = "cipher813@gmail.com" },
]
urls.Homepage = "https://github.com/cipher813/mnemon"
urls.Repository = "https://github.com/cipher813/mnemon"
urls.Issues = "https://github.com/cipher813/mnemon/issues"
urls.Changelog = "https://github.com/cipher813/mnemon/blob/main/CHANGELOG.md"
keywords = ["mcp", "memory", "ai", "agents", "llm", "sqlite", "vector-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
]
dependencies = [
    "mcp>=1.27",
    "numpy>=1.24",
    "fastembed>=0.3",
    "httpx[socks]>=0.25",
]

[project.optional-dependencies]
llm = [
    "llama-cpp-python>=0.3",
    "huggingface-hub>=0.20",
]
ui = [
    "streamlit>=1.30",
    "plotly>=5.18",
    "umap-learn>=0.5",
]
server = [
    "uvicorn>=0.29",
    "starlette>=0.37",
    "pyjwt[crypto]>=2.8",
    "authlib>=1.3",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "uvicorn>=0.29",
    "starlette>=0.37",
    "pyjwt[crypto]>=2.8",
    "authlib>=1.3",
]
all = [
    "mnemon-memory[llm,dev,ui,server]",
]

[project.scripts]
mnemon = "mnemon.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mnemon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: end-to-end tests that spawn a real mnemon serve-remote subprocess (skip with -m 'not integration')",
]

# Coverage configuration (used when pytest is invoked with --cov).
# CI runs `pytest --cov=src/mnemon --cov-fail-under=80` so a regression
# below the 80% floor fails the build. Excluded modules below are
# under-testable-by-design — keeping them in the coverage denominator
# would force fake/superficial tests that don't actually exercise the
# code (Streamlit dashboard, entry-point shim, release-engineering
# scripts that require real Fly/AWS).
[tool.coverage.run]
source = ["src/mnemon"]
omit = [
    # Streamlit dashboard — UI code that's only meaningfully testable
    # by running Streamlit. Operator runs this; CI doesn't.
    "src/mnemon/dashboard/*",
    # __main__ entry-point shim — 4 lines, no logic
    "src/mnemon/__main__.py",
    # Release-engineering operations on Fly + AWS — exercised by the
    # Layer-3 web test ritual (scripts/promote_stable.sh), not unit
    # tests. Mocking the full upgrade/downgrade path adds maintenance
    # cost without surfacing real bugs (those surface in Layer-3).
    "src/mnemon/upgrade.py",
    "src/mnemon/downgrade.py",
    # Deprecated / optional LLM path — kept for local-mode operators
    # who explicitly install [llm] extras. The deployed product is
    # LLM-free by design (2026-05-22 decision); NLI replaced the only
    # production use of this module (mnemon.contradiction). Tests
    # cover the surface that's actually called.
    "src/mnemon/llm.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff.lint.per-file-ignores]
# Streamlit convention: st.set_page_config(...) must precede any other
# Streamlit command, so page modules import library code after the
# call. Legit pattern, not refactoring.
"src/mnemon/dashboard/**/*.py" = ["E402"]
