[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mnemon-memory"
dynamic = ["version"]
description = "Universal long-term memory layer for AI agents via MCP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Brian McMahon", email = "cipher813@gmail.com" },
]
urls.Homepage = "https://github.com/cipher813/mnemon"
urls.Repository = "https://github.com/cipher813/mnemon"
urls.Issues = "https://github.com/cipher813/mnemon/issues"
urls.Changelog = "https://github.com/cipher813/mnemon/blob/main/CHANGELOG.md"
keywords = ["mcp", "memory", "ai", "agents", "llm", "sqlite", "vector-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
]
dependencies = [
    "mcp>=1.27",
    "numpy>=1.24",
    "fastembed>=0.3",
    "httpx[socks]>=0.25",
]

[project.optional-dependencies]
llm = [
    "llama-cpp-python>=0.3",
    "huggingface-hub>=0.20",
]
ui = [
    "streamlit>=1.30",
    "plotly>=5.18",
    "umap-learn>=0.5",
]
server = [
    "uvicorn>=0.29",
    "starlette>=0.37",
    "pyjwt[crypto]>=2.8",
    "authlib>=1.3",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "httpx>=0.27",
    "uvicorn>=0.29",
    "starlette>=0.37",
    "pyjwt[crypto]>=2.8",
    "authlib>=1.3",
    # Dashboard render-smoke tests (tests/test_dashboard_pages.py) use
    # Streamlit's headless AppTest + plotly charts. Kept here (not just in
    # [ui]) so the [dev] CI matrix runs them; the [server]-only job lacks
    # streamlit and skips them via importorskip. (umap stays [ui]-only —
    # the Graph test mocks load_umap_coords.)
    "streamlit>=1.30",
    "plotly>=5.18",
]
all = [
    "mnemon-memory[llm,dev,ui,server]",
]

[project.scripts]
mnemon = "mnemon.cli:main"

# Single source of truth for the version: src/mnemon/__init__.py's
# __version__. Bump it in ONE place and both the package runtime and the
# built/published artifact agree. (Before 2026-06-07 the version was a
# static field here AND a separate __version__ constant — they drifted in
# PR #195, which bumped __init__ to 0.7.0 but left this at rc8, so the
# build published the wrong version. Dynamic resolution prevents that.)
[tool.hatch.version]
path = "src/mnemon/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/mnemon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: end-to-end tests that spawn a real mnemon serve-remote subprocess (skip with -m 'not integration')",
]

# Coverage configuration (used when pytest is invoked with --cov).
# CI runs `pytest --cov=src/mnemon --cov-fail-under=80` so a regression
# below the 80% floor fails the build. Excluded modules below are
# under-testable-by-design — keeping them in the coverage denominator
# would force fake/superficial tests that don't actually exercise the
# code (Streamlit dashboard, entry-point shim, release-engineering
# scripts that require real Fly/AWS).
[tool.coverage.run]
source = ["src/mnemon"]
omit = [
    # Streamlit dashboard — UI code that's only meaningfully testable
    # by running Streamlit. Operator runs this; CI doesn't.
    "src/mnemon/dashboard/*",
    # __main__ entry-point shim — 4 lines, no logic
    "src/mnemon/__main__.py",
    # NOTE: upgrade.py / downgrade.py are now MEASURED (un-omitted
    # 2026-06-07). Their Fly + AWS subprocess calls are mocked in
    # test_upgrade.py / test_downgrade.py so the local↔web migration
    # paths carry CI coverage rather than relying solely on the
    # operator Layer-3 web ritual — this minimizes the manual-test
    # surface for long-term maintenance.
    # Deprecated / optional LLM path — kept for local-mode operators
    # who explicitly install [llm] extras. The deployed product is
    # LLM-free by design (2026-05-22 decision); NLI replaced the only
    # production use of this module (mnemon.contradiction). Tests
    # cover the surface that's actually called.
    "src/mnemon/llm.py",
]

[tool.coverage.report]
# Raised 80 → 88 on 2026-06-07 after the comprehensive-tool-coverage pass
# (downgrade 61→98, context_surfacing 74→99, server_remote 63→95,
# upgrade 86→93, + upgrade/downgrade un-omitted). The gate locks in that
# coverage so it can't silently regress — keeps the manual-test surface
# small for long-term maintenance.
fail_under = 88
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff.lint.per-file-ignores]
# Streamlit convention: st.set_page_config(...) must precede any other
# Streamlit command, so page modules import library code after the
# call. Legit pattern, not refactoring.
"src/mnemon/dashboard/**/*.py" = ["E402"]
